[package]
name = "envparser"
version = "0.1.1"
edition = "2024"

authors = ["Oduwale Awwal harwarl87@gmail.com"]
description = "A dotenv implementation for Rust"
homepage = "https://github.com/harwarl/envy"
license = "MIT"
keywords = ["envrironment", "env", "config", "settings", "dotenv"]
repository = "https://github.com/harwarl/envy"


[dependencies]
clap = { version = "4.6.1", features = ["derive"] }

