[package]
name = "envparser"
version = "0.1.1"
edition = "2024"

authors = ["Oduwale Awwal harwarl87@gmail.com"]
description = "A dotenv implementation for Rust"
homepage = "https://github.com/harwarl/envy"
license = "MIT"
keywords = ["envrironment", "env", "config", "settings", "dotenv"]
repository = "https://github.com/harwarl/envy"

[lib]
name = "envparser"
path = "src/lib.rs"

[[bin]]
name = "envparser"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.6.1", optional = true, features = ["derive"] }

[features]
cli = ["clap"]

